<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="25dip"
    android:paddingLeft="25dip"
    android:paddingRight="25dip"
    android:background="@color/white"
    >
    
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/intro"
	    android:gravity="center"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="40dip"
	    android:textSize="50sp"
	    android:textColor="@color/blue"
	    />
	    
	<Button
	    android:id="@+id/begin"
	    android:layout_width= "fill_parent"
	    android:layout_marginBottom="40dip"
	    android:textSize="30sp"
        android:layout_height="100dip"
	    android:text="@string/begin"
	    />
	
	<Button
	    android:id="@+id/instruct"
	    android:layout_width= "fill_parent"
	    android:layout_marginBottom="40dip"
	    android:textSize="30sp"
        android:layout_height="100dip"
	    android:text="@string/instruct"
	    />
	
	<Button
	    android:id="@+id/option"
	    android:layout_width= "fill_parent"
	    android:layout_marginBottom="40dip"
	    android:textSize="30sp"
        android:layout_height="100dip"
	    android:text="@string/option"
	    />
	
	<Button
	    android:id="@+id/about"
	   	android:layout_width= "fill_parent"
	    android:layout_marginBottom="40dip"
	    android:textSize="30sp"
        android:layout_height="100dip"
	    android:text="@string/about"
	    />
	
	
	    
</LinearLayout>
