<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dip"
    android:layout_marginTop="40dip"
    android:gravity="center"
    android:text="@string/monitor_titlescreen"
    android:textColor="@color/blue"
    android:textSize="50sp" />

<TextView
    android:id="@+id/timeTitle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dip"
    android:layout_marginLeft="15dip"
    android:gravity="left"
    android:text="@string/time"
    android:textColor="@color/black"
    android:textSize="35sp" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="bottom|left"
 >

	<TextView
	    android:id="@+id/minutes"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginBottom="20dip"
	    android:layout_marginLeft="100dip"
	    android:text="@string/minutesLabel"
	    android:textColor="@color/black"
	    android:textSize="30sp" />

	<TextView
	    android:id="@+id/minutesLabel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginBottom="20dip"
	    android:layout_marginLeft="40dip"
	    android:layout_marginRight="0dip"
	    android:maxWidth="140sp"
	    android:minWidth="140sp"
	    android:text="@string/minutesLabel"
	    android:textColor="@color/black"
	    android:textSize="30sp"
	    android:width="140sp" />

</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="bottom|left"
 >

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dip"
        android:layout_marginLeft="100dip"
        android:text="@string/secondsLabel"
        android:textColor="@color/black"
        android:textSize="30sp" />

	<TextView
	    android:id="@+id/secondsLabel"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginBottom="20dip"
	    android:layout_marginLeft="40dip"
	    android:layout_marginRight="0dip"
	    android:maxWidth="140sp"
	    android:minWidth="140sp"
	    android:text="@string/secondsLabel"
	    android:textColor="@color/black"
	    android:textSize="30sp"
	    android:width="140sp" />

</LinearLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dip"
    android:layout_marginLeft="15dip"
    android:gravity="left"
    android:text="@string/direction"
    android:textColor="@color/black"
    android:textSize="35sp" />

<ImageView
    android:id="@+id/dirView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dip"
    android:contentDescription="@string/description"
    android:maxHeight="160dp"
    android:maxWidth="125dp"
    android:minHeight="160dp"
    android:minWidth="125dp" />

<Button
	android:id="@+id/done"
	android:textSize="30sp"
    android:layout_height="100dip"
    android:layout_width="300dip"
   	android:layout_marginBottom="40dip"
	android:layout_gravity="center"
	android:text="@string/done"
/>  
<Button
	android:id="@+id/save"
	android:textSize="30sp"
    android:layout_height="100dip"
	android:layout_width="300dip"
	android:layout_marginBottom="40dip"
	android:layout_gravity="center"
	android:text="@string/save"
/>    
  
</LinearLayout>
