<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
<TextView
	android:text="@string/options_titlescreen"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
    android:gravity="center"
    android:layout_marginTop="40dip"
    android:layout_marginBottom="40dip"
    android:textSize="50sp"
    android:textColor="@color/blue"/>
<TextView
	android:text="@string/name"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textColor="@color/black"
	android:layout_marginLeft="15dip"
	android:layout_marginRight="15dip"
	android:textSize="30sp"/>

<EditText
    android:id="@+id/name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dip"
    android:layout_marginRight="15dip"
    android:layout_marginBottom="35dip"
    android:inputType="textEmailAddress"
    android:textSize="30sp" >

	</EditText>
	
<TextView
	android:text = "@string/emailTo"
	android:layout_width="fill_parent"
	android:singleLine="true"
	android:layout_height="wrap_content"
	android:textColor="@color/black"
	android:layout_marginLeft="15dip"
	android:layout_marginRight="15dip"
	android:textSize="30sp"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_marginBottom="35dip">

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_weight="0.52"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="30sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/emailButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_weight="1"
        android:textSize="30sp" 
        android:text="@string/email" />

</LinearLayout>

<TextView
	android:text = "@string/deviceFrom"
	android:layout_width="fill_parent"
	android:singleLine="true"
	android:layout_height="wrap_content"
	android:textColor="@color/black"
	android:layout_marginLeft="15dip"
	android:layout_marginRight="15dip"
	android:textSize="30sp"/>

<EditText
    android:id="@+id/device"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="35dip"
    android:layout_marginLeft="15dip"
    android:layout_marginRight="15dip"
    android:inputType="textEmailAddress"
    android:textSize="30sp" >

	</EditText>

<CheckBox
    android:id="@+id/bluetooth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="35dip"
    android:checked="false"
    android:text="@string/bluetooth"
    android:textColor="@color/black"
    android:textSize="30sp" />

    <CheckBox
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:checked="false"
        android:text="@string/notifications"
        android:textColor="@color/black"
        android:textSize="30sp" />

<TimePicker
    android:id="@+id/timeNot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp" />

</LinearLayout>
